--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -8,7 +8,7 @@
         {{ pin.title }}
         <p>{{ pin.description }}</p>
     </article>
-
+    <a href="{{ path('app_pins_edit', {id: pin.id}) }}">Editer</a> |
     <a href="{{ path('app_home') }}">Revenir à la page d'acceuil</a>
 
 {% endblock %}
