--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -9,6 +9,16 @@
         <p>{{ pin.description }}</p>
     </article>
     <a href="{{ path('app_pins_edit', {id: pin.id}) }}">Editer</a> |
+
+    <a href="#" onclick="event.preventDefault();
+        confirm('êtes-vous sûr ?')&&document.getElementById('js-pin_delete_form').submit();"
+    >
+        Delete
+    </a> |
     <a href="{{ path('app_home') }}">Revenir à la page d'acceuil</a>
+
+    <form id="js-pin_delete_form" action="{{ path('app_pins_delete', {id: pin.id}) }}" method="post" style="display: none;">
+        <input type="hidden" name="_method" value="DELETE">
+    </form>
 
 {% endblock %}
