--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -4,10 +4,7 @@
 
 {% block body %}
     <h1>Create</h1>
-    {{ form_start(form) }}
-      {{ form_widget(form) }}
-        <input type="submit" value="Create Pin">
-    {{ form_end(form) }}
 
+    {{ include('pins/_form.html.twig', {'submitButtonText': 'Create Pin'}) }}
 
 {% endblock %}
