--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -18,6 +18,7 @@
     <a href="{{ path('app_home') }}">Revenir à la page d'acceuil</a>
 
     <form id="js-pin_delete_form" action="{{ path('app_pins_delete', {id: pin.id}) }}" method="post" style="display: none;">
+        <input type="hidden" name="csrf_token" value="{{ csrf_token('pin_delete' ~ pin.id) }}">
         <input type="hidden" name="_method" value="DELETE">
     </form>
 
