--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -22,13 +22,8 @@
         </style>
     </head>
     <body>
-        {% for type, messages in app.flashes %}
-            {% for message in messages %}
-                <div class="alert alert-{{ type }}" role="alert">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endfor %}
+        {{ include('layouts/partials/_flash_message.html.twig') }}
+
         <nav>
             <ul>
                 <li><a href="{{ path('app_home') }}">Home</a></li>
