--- a/templates/pins/create.html.twig
+++ b/templates/pins/create.html.twig
@@ -3,7 +3,7 @@
 {% block title 'new pin' %}
 
 {% block body %}
-    <h1>Create</h1>
+    <h1 class="text-center">Création</h1>
 
     {{ include('pins/_form.html.twig', {'submitButtonText': 'Create Pin'}) }}
 
