--- a/templates/pins/edit.html.twig
+++ b/templates/pins/edit.html.twig
@@ -3,7 +3,7 @@
 {% block title 'Edit Pin #' ~ pin.id %}
 
 {% block body %}
-    <h1>Edit Pin# {{ pin.id }}</h1>
+    <h1 class="text-center">Edition Pin# {{ pin.id }}</h1>
 
     {{ include('pins/_form.html.twig', {submitButtonText: 'Update Pin'}) }}
 
