--- a/templates/layouts/base.html.twig
+++ b/templates/layouts/base.html.twig
@@ -6,28 +6,7 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
             <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-            <style>
-                html, body{
-                    font-family: 'Montserrat', sans-serif;
-                }
-                .alert{
-                    padding: 10px;
-                    color: white;
-                    text-align: center;
-                    margin: 0;
-                    border: none;
-                    border-radius: 0;
-                }
-                .alert-success{
-                    background-color: green;
-                }
-                .alert-error{
-                    background-color: red;
-                }
-                .alert-info{
-                    background-color: blue;
-                }
-            </style>
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
         {% endblock %}
 
     </head>
