--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,3 +18,16 @@ html, body{
 .alert-info{
     background-color: blue;
 }
+
+.vich-image .form-check{
+    margin-top: 20px !important;
+}
+img {
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+}
+
+.vich-image img {
+    box-shadow: 5px 5px 5px 5px grey;
+}
