--- a/templates/pins/show.html.twig
+++ b/templates/pins/show.html.twig
@@ -8,15 +8,9 @@
         <div class="col-md-6 mx-auto">
             <article class="pin bg-white rounded shadow">
                 <div class="mw-100 overflow-hidden">
-                    <a href="{{ path('app_pins_show', {id: pin.id}) }}">
                         <img class="w-100 rounded-top"  src=" {{vich_uploader_asset ( pin )}}"  alt=" {{ pin.title }}" />
-                    </a>
                 </div>
-                <h2 class="h5 pl-3 pt-3">
-                    <a class="text-secondary text-decoration-none" href="{{ path('app_pins_show', {id: pin.id}) }}">
-                        {{ pin.title }}
-                    </a>
-                </h2>
+                <h2 class="h5 pl-3 pt-3">{{ pin.title }}</h2>
                 <p class="pl-3 pb-3 text-muted">
                     <small>
                         <time datetime="{{ pin.createdAt|date('Y-m-d H:i:s') }}">
@@ -25,7 +19,7 @@
                          by  {{ pin.user.fullName }}
                     </small>
                 </p>
-                <p class="pl-3 pb-3 text-muted">
+                <p class="pl-3 pr-3 pb-3 text-muted text-break">
                     {{ pin.description }}
                 </p>
 
