--- a/templates/layouts/partials/_nav.html.twig
+++ b/templates/layouts/partials/_nav.html.twig
@@ -7,15 +7,24 @@
 
         <div class="collapse navbar-collapse" id="navbarsExample03">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_pins_create') }}">Nouveau Pin</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Compte</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Déconnecter</a>
-                </li>
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_pins_create') }}">Nouveau Pin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Compte</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_logout') }}">Déconnecter</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Inscripton</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                    </li>
+                {% endif %}
             </ul>
         </div>
     </div>
