add mail service and user register form

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,7 +43,7 @@
                 </button>
 
                 <p class="mt-5 mb-3 text-center text-muted">
-                    Vous n'êtes pas connecter maintenant? <a href="#">Créer un compte</a>
+                    Vous n'êtes pas connecter maintenant? <a href="{{ path('app_register') }}">Créer un compte</a>
                 </p>
             </form>
         </div>
