--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -22,7 +22,7 @@
                     {#   <p>Submitted {{ pin.createdAt|ago }}</p> #}
                     <p class="pl-3 pb-3 text-muted">
                         <small>
-                            Submitted {{ pin.user.fullName }}
+                            Submitted by {{ pin.user.fullName }}
                         </small>
                     </p>
                 </article>
