--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -2,21 +2,36 @@
 
 {% block title 'Register' %}
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
 
-    <h1>Register</h1>
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            {% for flashError in app.flashes('verify_email_error') %}
+                <div class="alert alert-error rounded mb-3" role="alert">{{ flashError }}</div>
+            {% endfor %}
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.firstName) }}
-        {{ form_row(registrationForm.lastName) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+            <h1 class="text-center my-5">Créer un compte</h1>
 
-        <button type="submit" class="btn btn-primary">Register</button>
-    {{ form_end(registrationForm) }}
+            {{ form_start(registrationForm) }}
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form_row(registrationForm.firstName) }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form_row(registrationForm.lastName) }}
+                    </div>
+                </div>
+            {{ form_row(registrationForm.email) }}
+            {{ form_row(registrationForm.plainPassword, {
+                label: 'Password'
+            }) }}
+            {{ form_row(registrationForm.agreeTerms) }}
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Enregistrer</button>
+            <p class="mt-5 mb-3 text-center text-muted">
+                Vous avez déjà un compte? <a href="{{ path('app_login') }}">Connecter-ici</a>
+            </p>
+            {{ form_end(registrationForm) }}
+
+        </div>
+    </div>
+
 {% endblock %}
