Explicite is better than implicite

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -29,7 +29,7 @@
                 Enregistrer
             </button>
             <p class="mt-5 mb-3 text-center text-muted">
-                Vous avez déjà un compte? <a href="{{ path('app_login') }}">Connecter-ici</a>
+                Vous avez déjà un compte? <a href="{{ path('app_login') }}">Connectez-ici</a>
             </p>
             {{ form_end(registrationForm) }}
 
