--- a/templates/pins/index.html.twig
+++ b/templates/pins/index.html.twig
@@ -7,26 +7,29 @@
         <h1 class="mb-4 text-center text-muted">{{ pluralize(pins|length, 'Pin') }}</h1>
         <div class="row">
             {% for pin in pins %}
-                <article class="pin col-md-4 bg-white rounded">
-                   <div class="mw-100 overflow-hidden">
-                       <a href="{{ path('app_pins_show', {id: pin.id}) }}">
-                           <img class="w-100 rounded-top"  src=" {{vich_uploader_asset ( pin )}}"  alt=" {{ pin.title }}" />
-                       </a>
-                   </div>
-                    <h2 class="h5 pl-3 pt-3">
-                        <a class="text-secondary text-decoration-none" href="{{ path('app_pins_show', {id: pin.id}) }}">
-                            {{ pin.title }}
-                        </a>
-                    </h2>
-                   {# <p>{{ pin.description|u.truncate(10,'...', false) }}</p> #}
-                    {#   <p>Submitted {{ pin.createdAt|ago }}</p> #}
-                    <p class="pl-3 pb-3 text-muted">
-                        <small>
-                            Submitted <by></by> {{ pin.user.fullName }}
-                        </small>
-                    </p>
-
-                </article>
+             <div class="col-md-4">
+                 <article class="pin bg-white rounded shadow">
+                     <div class="mw-100 overflow-hidden overflow-hidden">
+                         <a href="{{ path('app_pins_show', {id: pin.id}) }}">
+                             <img class="w-100 rounded-top"  src=" {{pin.imageName ? vich_uploader_asset ( pin ) : asset(
+                                 'build/images/placeholder.jpg') | imagine_filter('squared_thumbnail_medium')}}"  alt=" {{ pin.title }}" />
+                         </a>
+                     </div>
+                     <h2 class="h5 pl-3 pt-3">
+                         <a class="text-secondary text-decoration-none" href="{{ path('app_pins_show', {id: pin.id}) }}">
+                             {{ pin.title }}
+                         </a>
+                     </h2>
+                     {# <p>{{ pin.description|u.truncate(10,'...', false) }}</p> #}
+                     {#   <p>Submitted {{ pin.createdAt|ago }}</p> #}
+                     <p class="pl-3 pb-3 text-muted">
+                         <small>
+                             Submitted <by></by> {{ pin.user.fullName }}
+                         </small>
+                     </p>
+                     
+                 </article>
+             </div>
             {% endfor %}
         </div>
     {% else %}
